# pycon

./: .env  .gitignore  README.md  env.template  pyproject.toml  requirements.txt
apps/note/: forms.py  models.py  urls.py  views.py
apps/todo/: forms.py  models.py  urls.py  views.py
config/: settings.py  urls.py
config/settings/: base.py  dev.py  production.py
templates/: 404.html  500.html  _base.html  c_index.html  index.html
templates/account/: login.html  signup.html
templates/components/: base.html  button.html  drawer.html  form.html  navbar.html
templates/components/note/: detail.html  list.html
templates/components/task/: detail.html  list.html
templates/includes/: navbar.html
