[project]
name = "pycon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.6",
    "django-cotton>=1.5.1",
    "django-cotton-components>=0.1.6",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.18.0",
    "ruff>=0.9.7",
]
